--- a/WebWickerCore/pom.xml
+++ b/WebWickerCore/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.tieto.webwicker</groupId>
 	<artifactId>WebWickerCore</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 		<!-- TODO project name  -->
 	<name>WebWicker</name>
 	<description></description>
@@ -42,6 +42,7 @@
 	</licenses>
 	<properties>
 		<wicket.version>7.3.0</wicket.version>
+		<wicket-plugin.version>0.5.0</wicket-plugin.version>
 		<jetty9.version>9.2.13.v20150730</jetty9.version>
 		<log4j.version>2.5</log4j.version>
 		<junit.version>4.12</junit.version>
@@ -51,19 +52,33 @@
 		<wtp.version>none</wtp.version>
 	</properties>
 	<dependencies>
-		<!--  WICKET DEPENDENCIES -->
+		<!-- API DEPENDENCY -->
+		<dependency>
+			<groupId>com.tieto.webwicker</groupId>
+			<artifactId>WebWickerApi</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<!-- WICKET DEPENDENCIES -->
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
 			<version>${wicket.version}</version>
 		</dependency>
-		<!-- OPTIONAL DEPENDENCY -->
+		<!-- OPTIONAL WICKET DEPENDENCY -->
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-extensions</artifactId>
 			<version>${wicket.version}</version>
 		</dependency>
 
+		<!-- PL4J DEPENDENCIES -->
+        <dependency>
+            <groupId>ro.fortsoft.wicket.plugin</groupId>
+            <artifactId>wicket-plugin</artifactId>
+            <version>${wicket-plugin.version}</version>
+		</dependency>
+		
 		<!-- LOGGING DEPENDENCIES - LOG4J -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
