--- a/WebWickerCore/src/main/webapp/WEB-INF/web.xml
+++ b/WebWickerCore/src/main/webapp/WEB-INF/web.xml
@@ -17,16 +17,16 @@
 		"deployment". If no configuration is found, "development" is the default. -->
 
 	<filter>
-		<filter-name>wicket.ciwebfw</filter-name>
+		<filter-name>wicket.webwicker</filter-name>
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
-			<param-value>com.tieto.ciweb.WicketApplication</param-value>
+			<param-value>com.tieto.webwicker.WicketApplication</param-value>
 		</init-param>
 	</filter>
 
 	<filter-mapping>
-		<filter-name>wicket.ciwebfw</filter-name>
+		<filter-name>wicket.webwicker</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
